--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 URL: https://github.com/okemp99/mypackage
 BugReports: https://github.com/okemp99/mypackage/issues
+Imports: 
+    assertthat
