--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ URL: https://github.com/okemp99/mypackage
 BugReports: https://github.com/okemp99/mypackage/issues
 Imports: 
     assertthat
+Depends: 
+    R (>= 2.10)
+LazyData: true
