--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: mypackage
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Test Package for Training Session 
+Version: 0.0.1.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Ollie", "Kemp", email = "Oliver.Kemp@warwick.ac.uk", role = c("aut", "cre"))
+Description: Test package for package development training 28/7/2022.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
